[package]
name = "bllvm-governance"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "Governance webhook and economic node tracking module for bllvm-node"
license = "MIT"
repository = "https://github.com/BTCDecoded/bllvm-governance"
homepage = "https://btcdecoded.org"
keywords = ["bitcoin", "governance", "webhook", "module"]
categories = ["cryptography::cryptocurrencies"]

[[bin]]
name = "bllvm-governance"
path = "src/main.rs"

[dependencies]
# bllvm-node for module system integration
bllvm-node = { path = "../bllvm-node", package = "bllvm-node" }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for webhooks
reqwest = { version = "0.12", features = ["json"] }

# Hex encoding/decoding
hex = "0.4"

# SHA256 hashing
sha2 = "0.10"

# Command-line argument parsing
clap = { version = "4.0", features = ["derive"] }

# Futures for async streams
futures = "0.3"

# Async trait support
async-trait = "0.1"

[dev-dependencies]
# Testing
tokio-test = "0.4"

