[package]
name = "blvm-governance"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "Governance webhook and economic node tracking module for blvm-node"
license = "MIT"
repository = "https://github.com/BTCDecoded/blvm-governance"
homepage = "https://btcdecoded.org"
keywords = ["bitcoin", "governance", "webhook", "module"]
categories = ["cryptography::cryptocurrencies"]

[[bin]]
name = "blvm-governance"
path = "src/main.rs"

[dependencies]
# blvm-node for module system integration
blvm-node = ">=0.1, <1"
# Protocol layer for transaction/block types
blvm-protocol = ">=0.1, <1"

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for webhooks (blocking for sync CLI)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Hex encoding/decoding
hex = "0.4"

# Binary serialization for proposal storage
bincode = "1.3"

# SHA256 hashing
sha2 = "0.10"

# Futures for async streams
futures = "0.3"

# Async trait support
async-trait = "0.1"

# blvm-sdk for ModuleBootstrap (env-based bootstrap)
blvm-sdk = { path = "../blvm-sdk", default-features = false, features = ["node"] }
# blvm-sdk-macros for #[config]
blvm-sdk-macros = { path = "../blvm-sdk/crates/blvm-sdk-macros" }

[patch.crates-io]
blvm-node = { path = "../blvm-node" }
blvm-protocol = { path = "../blvm-protocol" }
blvm-consensus = { path = "../blvm-consensus" }
blvm-sdk = { path = "../blvm-sdk" }

[dev-dependencies]
# Testing
tokio-test = "0.4"

